Enhanced sample clients to show different levels of complexity for using
